--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ga('send', 'pageview');
   </script>
   <script async src="https://www.google-analytics.com/analytics.js"></script>
+  <script>window.plausible = console.log</script>
 </head>
 
 <body>
