--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="assistant-app" data-version="7.X.X" data-url="https://arduinojson.org" class="container">
+  <div id="assistant-app" data-url="https://arduinojson.org" class="container">
     <div class="alert alert-info">
       <span class="spinner-border spinner-border-sm" role="status"></span>
       The Arduino Assistant is loading. Please wait.
